[package]
name = "pampom"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_pampom"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"
pam = "0.8.0"
pam_bindings = { version = "0.1.1", package = "pam-bindings" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
