[package]
name = "pampom"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_pampom"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.150"
pam = "0.8.0"
pam_bindings = { version = "0.1.1", package = "pam-bindings" }
